<resources>
    <string name="app_name">Feigle客家特产</string>
    <string name="title_home">首页</string>
    <string name="title_shopping_cart">购物车</string>
    <string name="title_me">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_buy">BuyActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">用户名密码不正确</string>
    <string name="error_field_required">不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_name">用户名</string>
    <string name="un_login">你还没有登录，请先登录！</string>
    <string name="error_network">网络请求失败！</string>
    <string name="error_network_click_retry">网络请求失败,点击重试</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="no_data">没有数据</string>
    <string name="choose_address">选择地址</string>
    <string name="received_address">收货地址</string>
    <string name="new_order">创建订单</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_add_address">新增收货地址</string>
    <string name="contact">联系人</string>
    <string name="phone">手机号</string>
    <string name="set_default">设为默认</string>
    <string name="commit">提交</string>
    <string name="loading">正在加载...</string>
    <string name="upload">正在提交请求...</string>
    <string name="name">用户名</string>
    <string name="psw">密码</string>
    <string name="title_activity_edit_address">编辑收货地址</string>
    <string name="select_address">请选择收件人</string>
    <string name="pay_guide_detail">成功提交订单后,系统将生成订单号，然后打开微信或者支付宝扫描Feigle收款二维码进行支付，使用微信或者支付宝支付时请务必将订单号复制到备注，
        这样客服才能查询到你支付的订单，收款二维码请前往支付指引下载或者关注Feigle客家特产公众号下载,如需再次查询订单号请前往待付款</string>
    <string name="error_field_exceed">用户名不能超过6个字</string>
    <string name="pay_guide">支付指引</string>
    <string name="commit_success">提交成功</string>
    <string name="no_select">你未选择任何商品</string>
    <string name="title_activity_buy_list">BuyListActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="order_history">我的订单</string>
    <string name="order_all">全部订单</string>
    <string name="order_wait_pay">待付款</string>
    <string name="order_wait_receive">待收货</string>
    <string name="comfirm_delete">你确定删除吗</string>
    <string name="comfirm_waring">注意</string>
    <string name="personal">个人资料</string>
    <string name="update_psw">修改密码</string>
    <string name="update_phone">修改手机</string>
    <string name="check_version">检查更新</string>
    <string name="exit">退出登录</string>
    <string name="problem">密保问题</string>
    <string name="confirm_psw">确认密码</string>
    <string name="not_the_same">两次密码不一致</string>
    <string name="title_activity_update_psw">UpdatePswActivity</string>
    <string name="old_psw">旧密码</string>
    <string name="new_psw">新密码</string>
    <string name="new_phone">新手机</string>
    <string name="is_new">当前已是最新版本</string>
    <string name="save_code">保存收款码</string>
    <string name="pay_guide_alipay">支付宝支付教程</string>
    <string name="pay_guide_wechart">微信支付教程</string>
    <string name="saving">正在保存...</string>
    <string name="tip">提示</string>
    <string name="tip_save_success">保存成功,订单支付请前往支付宝或者微信扫描收款码</string>
    <string name="negotiate">合作洽谈</string>
    <string name="negotiate_developer">软件开发及购买</string>
    <string name="negotiate_supply">产品供应洽谈</string>
    <string name="negotiate_contact">Feigle微信：</string>
    <string name="negotiate_tip">请关注Feigle客家特产公众号后回复合作洽谈</string>
    <string name="service">客服反馈</string>
    <string name="service_content">如果你有任何问题或者建议，请关注Feigle客家特产公众号，在公众号里直接回复你的问题或建议，我们将竭诚为你服务</string>
    <string name="service_number">微信公众号：</string>
    <string name="service_wechat_number">Feigle客家特产</string>
    <string name="confirm">注意</string>
    <string name="confirm_permission_storage">拒绝此权限将不能保存支付二维码</string>
    <string name="allow">允许</string>
    <string name="fail_save_code">二维码保存失败</string>
    <string name="alipay">支付宝支付</string>
</resources>
